--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: spinevision-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
