Fix deployment: use uvicorn --app-dir backend to locate app module

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: spinevision-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: env PYTHONPATH=backend uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --app-dir backend --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
