Switch to Argon2 hashing to fix bcrypt/passlib 500 error

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ psycopg2-binary>=2.9.9
 
 # Authentication
 python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
+passlib>=1.7.4
+argon2-cffi>=23.1.0
 
 # Environment and Configuration
 python-dotenv>=1.0.0
